Give each block transition individual styles

--- a/components/blocks/blocks.sass
+++ b/components/blocks/blocks.sass
@@ -4,12 +4,42 @@
   width: 100%
   position: relative
   overflow: visible
+  
+.blocks--reverse
   flex-direction: row-reverse
+
+.blocks--pink
+  .block
+    background: linear-gradient(to bottom, $block-start-color--pink, $block-middle-color--pink 33%, $block-end-color--pink)
+  .block:before
+    background-image: -webkit-gradient(linear, 0 100%, 0 0, from($block-bottom-color--pink), to($block-right-color--pink))
+  .block:after
+    background-image: -webkit-gradient(linear, 0 0, 100% 0, from($block-bottom-color--pink), to($block-bottom-color--pink))
+.blocks--orange
+  .block
+    background: linear-gradient(to bottom, $block-start-color--orange, $block-middle-color--orange 33%, $block-end-color--orange)
+  .block:before
+    background-image: -webkit-gradient(linear, 0 100%, 0 0, from($block-bottom-color--orange), to($block-right-color--orange))
+  .block:after
+    background-image: -webkit-gradient(linear, 0 0, 100% 0, from($block-bottom-color--orange), to($block-bottom-color--orange))
+.blocks--yellow
+  .block
+    background: linear-gradient(to bottom, $block-start-color--yellow, $block-middle-color--yellow 33%, $block-end-color--yellow)
+  .block:before
+    background-image: -webkit-gradient(linear, 0 100%, 0 0, from($block-bottom-color--yellow), to($block-right-color--yellow))
+  .block:after
+    background-image: -webkit-gradient(linear, 0 0, 100% 0, from($block-bottom-color--yellow), to($block-bottom-color--yellow))
+.blocks--cyan
+  .block
+    background: linear-gradient(to bottom, $block-start-color--cyan, $block-middle-color--cyan 33%, $block-end-color--cyan)
+  .block:before
+    background-image: -webkit-gradient(linear, 0 100%, 0 0, from($block-bottom-color--cyan), to($block-right-color--cyan))
+  .block:after
+    background-image: -webkit-gradient(linear, 0 0, 100% 0, from($block-bottom-color--cyan), to($block-bottom-color--cyan))
 
 .block
   width: 100%
   height: 100vh
-  background: linear-gradient(to bottom, $block-start-color, $block-middle-color 33%, $block-end-color)
   margin-right: $spacing-30
 
 .block:before,
@@ -23,10 +53,8 @@
   bottom: -0.5rem
   width: 0.5rem
   height: calc(100% + 2px)
-  background-image: -webkit-gradient(linear, 0 100%, 0 0, from($block-bottom-color), to($block-right-color))
-
+  
 .block:after
   right: -0.5rem
   height: 0.5rem
   width: calc(100% + 2px)
-  background-image: -webkit-gradient(linear, 0 0, 100% 0, from($block-bottom-color), to($block-bottom-color))
