--- a/components/colors/colors.html
+++ b/components/colors/colors.html
@@ -16,12 +16,12 @@
     <div class="primary__20 colors__box"></div>
   </div>
   <h2 class="colors__heading">Accents</h2>
-  <div class="blue">
-    <div class="blue__100 colors__box"></div>
-    <div class="blue__80 colors__box"></div>
-    <div class="blue__60 colors__box"></div>
-    <div class="blue__40 colors__box"></div>
-    <div class="blue__20 colors__box"></div>
+  <div class="cyan">
+    <div class="cyan__100 colors__box"></div>
+    <div class="cyan__80 colors__box"></div>
+    <div class="cyan__60 colors__box"></div>
+    <div class="cyan__40 colors__box"></div>
+    <div class="cyan__20 colors__box"></div>
   </div>
   <div class="yellow">
     <div class="yellow__100 colors__box"></div>
