--- a/components/colors/colors.sass
+++ b/components/colors/colors.sass
@@ -14,7 +14,7 @@
 
 .neutral, 
 .primary,
-.blue,
+.cyan,
 .yellow,
 .green,
 .orange
@@ -50,16 +50,16 @@
 .primary__20
   background: $color-primary-20
 
-.blue__100
-  background: $color-accent-blue-100
-.blue__80
-  background: $color-accent-blue-80
-.blue__60
-  background: $color-accent-blue-60
-.blue__40
-  background: $color-accent-blue-40
-.blue__20
-  background: $color-accent-blue-20
+.cyan__100
+  background: $color-accent-cyan-100
+.cyan__80
+  background: $color-accent-cyan-80
+.cyan__60
+  background: $color-accent-cyan-60
+.cyan__40
+  background: $color-accent-cyan-40
+.cyan__20
+  background: $color-accent-cyan-20
 
 .yellow__100
   background: $color-accent-yellow-100
