--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -19,12 +19,12 @@ $color-primary-60: #FF73C6
 $color-primary-40: #FFABDD
 $color-primary-20: #FFE4F4
 
-// Accent Blue
-$color-accent-blue-100: #00BAFF
-$color-accent-blue-80: #3AC9FF
-$color-accent-blue-60: #73D9FF
-$color-accent-blue-40: #ADE9FF
-$color-accent-blue-20: #E5F8FF
+// Accent Cyan
+$color-accent-cyan-100: #00BAFF
+$color-accent-cyan-80: #3AC9FF
+$color-accent-cyan-60: #73D9FF
+$color-accent-cyan-40: #ADE9FF
+$color-accent-cyan-20: #E5F8FF
 
 // Accent Yellow
 $color-accent-yellow-100: #FFEB00
@@ -64,7 +64,7 @@ $nav-font-hover-color: $color-neutral-20
 $nav-strikethrough-color--about: $color-accent-yellow-100
 $nav-strikethrough-color--projects: $color-accent-orange-100
 $nav-strikethrough-color--workflow: $color-primary-100
-$nav-strikethrough-color--contact: $color-accent-blue-100
+$nav-strikethrough-color--contact: $color-accent-cyan-100
 
 // About colors
 $profile-name-font-color: $color-neutral-20
@@ -88,8 +88,26 @@ $footer-font-color: $color-neutral-40
 $footer-font-hover-color: $color-neutral-20
 
 // Block colors
-$block-start-color: $color-primary-60
-$block-middle-color: $color-primary-100
-$block-end-color: $color-neutral-100
-$block-right-color: $color-primary-100
-$block-bottom-color: $color-neutral-100
+$block-start-color--pink: $color-primary-60
+$block-middle-color--pink: $color-primary-100
+$block-end-color--pink: $color-neutral-100
+$block-right-color--pink: $color-primary-100
+$block-bottom-color--pink: $color-neutral-100
+
+$block-start-color--orange: $color-accent-orange-60
+$block-middle-color--orange: $color-accent-orange-100
+$block-end-color--orange: $color-neutral-100
+$block-right-color--orange: $color-accent-orange-100
+$block-bottom-color--orange: $color-neutral-100
+
+$block-start-color--yellow: $color-accent-yellow-60
+$block-middle-color--yellow: $color-accent-yellow-100
+$block-end-color--yellow: $color-neutral-100
+$block-right-color--yellow: $color-accent-yellow-100
+$block-bottom-color--yellow: $color-neutral-100
+
+$block-start-color--cyan: $color-accent-cyan-60
+$block-middle-color--cyan: $color-accent-cyan-100
+$block-end-color--cyan: $color-neutral-100
+$block-right-color--cyan: $color-accent-cyan-100
+$block-bottom-color--cyan: $color-neutral-100
