--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -70,7 +70,7 @@ $nav-strikethrough-color--contact: $color-accent-cyan-100
 $profile-name-font-color: $color-neutral-20
 $profile-about-font-color: $color-neutral-40
 $about-fade-start-color: $color-neutral-20
-$about-fade-end-color: rgba(0, 0, 0, 0);
+$about-fade-end-color: rgba(0, 0, 0, 0)
 $profile-block-color: $color-neutral-20
 
 // Projects colors
@@ -88,26 +88,20 @@ $footer-font-color: $color-neutral-40
 $footer-font-hover-color: $color-neutral-20
 
 // Block colors
+$block-bottom-color: $color-neutral-100
+
 $block-start-color--pink: $color-primary-60
 $block-middle-color--pink: $color-primary-100
-$block-end-color--pink: $color-neutral-100
 $block-right-color--pink: $color-primary-100
-$block-bottom-color--pink: $color-neutral-100
 
 $block-start-color--orange: $color-accent-orange-60
 $block-middle-color--orange: $color-accent-orange-100
-$block-end-color--orange: $color-neutral-100
 $block-right-color--orange: $color-accent-orange-100
-$block-bottom-color--orange: $color-neutral-100
 
 $block-start-color--yellow: $color-accent-yellow-60
 $block-middle-color--yellow: $color-accent-yellow-100
-$block-end-color--yellow: $color-neutral-100
 $block-right-color--yellow: $color-accent-yellow-100
-$block-bottom-color--yellow: $color-neutral-100
 
 $block-start-color--cyan: $color-accent-cyan-60
 $block-middle-color--cyan: $color-accent-cyan-100
-$block-end-color--cyan: $color-neutral-100
 $block-right-color--cyan: $color-accent-cyan-100
-$block-bottom-color--cyan: $color-neutral-100
