--- a/global/main.sass
+++ b/global/main.sass
@@ -20,3 +20,6 @@
 @import ../components/nav/nav
 @import ../components/projects/projects
 @import ../components/workflow/workflow
+
+.wrapper
+  overflow: hidden
