--- a/components/hero/hero.sass
+++ b/components/hero/hero.sass
@@ -18,6 +18,7 @@
   -webkit-background-clip: text
   -webkit-text-fill-color: transparent
   margin: $spacing-20
+  z-index: 2
   +media(tablet-landscape)
     font-size: $font-size-90
   +media(tablet-portrait)
@@ -35,3 +36,14 @@
   -webkit-text-fill-color: transparent
   padding: $spacing-20
 
+.hero__video-wrap
+  position: absolute
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+  overflow: hidden
+
+.hero__video
+  min-width: 100%
+  min-height: 100%
