--- a/components/hero/hero.sass
+++ b/components/hero/hero.sass
@@ -7,7 +7,6 @@
   flex-direction: column
   align-items: center
   justify-content: center
-  background-color: $hero-background-color
 
 .hero__heading
   +font-secondary
@@ -18,7 +17,6 @@
   -webkit-background-clip: text
   -webkit-text-fill-color: transparent
   margin: $spacing-20
-  z-index: 2
   +media(tablet-landscape)
     font-size: $font-size-90
   +media(tablet-portrait)
@@ -43,7 +41,18 @@
   width: 100%
   height: 100%
   overflow: hidden
+  z-index: -2
 
 .hero__video
   min-width: 100%
   min-height: 100%
+
+.hero__overlay
+  height: 100%
+  width: 100%
+  position: absolute
+  top: 0
+  left: 0
+  background: $hero-background-color
+  z-index: -1
+  opacity: 0
