--- a/global/sass-config/_mixins.sass
+++ b/global/sass-config/_mixins.sass
@@ -6,6 +6,9 @@
   font-family: 'Roboto', Arial, Helvetica, sans-serif
 
 // Font Weights
+=font-weight-light
+  font-weight: 300
+
 =font-weight-regular
   font-weight: 400
 
