--- a/components/contact/contact.html
+++ b/components/contact/contact.html
@@ -1,1 +1,47 @@
-<section class="contact" id="contact"></section>
+<section class="contact" id="contact">
+  <div class="contact__info">
+    <h1 class="contact__header">Get in touch.</h1>
+    <a href="mailto:{{ component.email }}" class="contact__email">{{
+      component.email
+    }}</a>
+    <div class="contact__topics">
+      {% for topic in component.topics %}
+      <a href="#" class="contact__topic">{{ topic }} &#10141;</a>
+      {% endfor %}
+    </div>
+  </div>
+  <div class="contact__form contact__form--1">
+    <div class="form__group">
+      <label for="name" class="form__label">Name</label>
+      <input
+        type="text"
+        id="name"
+        name="name"
+        placeholder="Name"
+        class="form__input"
+      />
+    </div>
+    <div class="form__group">
+      <label for="email" class="form__label">Email</label>
+      <input
+        type="text"
+        id="email"
+        name="email"
+        placeholder="Email"
+        class="form__input"
+      />
+    </div>
+    <div class="form__group">
+      <label for="message" class="form__label">Message</label>
+      <textarea
+        id="message"
+        name="message"
+        placeholder="So what do you want to talk about?"
+        class="form__textarea"
+      ></textarea>
+    </div>
+    <div class="form__group">
+      <button type="submit" class="form__button">Send</button>
+    </div>
+  </div>
+</section>
