--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -105,3 +105,12 @@ $block-right-color--yellow: $color-accent-yellow-100
 $block-start-color--cyan: $color-accent-cyan-60
 $block-middle-color--cyan: $color-accent-cyan-100
 $block-right-color--cyan: $color-accent-cyan-100
+
+// Contact colors
+$contact-header-color: $color-neutral-20
+$contact-email-color: $color-neutral-20
+$contact-email-border-color: $color-neutral-60
+$contact-topic-color: $color-accent-cyan-40
+$contact-label-color: $color-neutral-20
+$contact-input-color: $color-neutral-20
+$contact-border-color: $color-neutral-20
