--- a/components/contact/contact.html
+++ b/components/contact/contact.html
@@ -10,38 +10,33 @@
       {% endfor %}
     </div>
   </div>
-  <div class="contact__form contact__form--1">
+
+  {% for form in component.forms %}
+  <div class="{{ form.class }}">
+    {% for field in form.field %}
     <div class="form__group">
-      <label for="name" class="form__label">Name</label>
+      <label for="{{ field.id }}" class="form__label">{{ field.label }}</label>
+      {% if field.element == 'input' %}
       <input
-        type="text"
-        id="name"
-        name="name"
-        placeholder="Name"
-        class="form__input"
+        type="{{ field.type }}"
+        id="{{ field.id }}"
+        name="{{ field.id }}"
+        placeholder="{{ field.placeholder }}"
+        class="{{ field.class }}"
       />
-    </div>
-    <div class="form__group">
-      <label for="email" class="form__label">Email</label>
-      <input
-        type="text"
-        id="email"
-        name="email"
-        placeholder="Email"
-        class="form__input"
-      />
-    </div>
-    <div class="form__group">
-      <label for="message" class="form__label">Message</label>
+      {% elif field.element == 'textarea' %}
       <textarea
-        id="message"
-        name="message"
-        placeholder="So what do you want to talk about?"
-        class="form__textarea"
+        name="{{ field.id }}"
+        id="{{ field.id }}"
+        placeholder="{{ field.placeholder }}"
+        class="{{ field.class }}"
       ></textarea>
+      {% endif %}
     </div>
+    {% endfor %}
     <div class="form__group">
       <button type="submit" class="form__button">Send</button>
     </div>
   </div>
+  {% endfor %}
 </section>
