Minor stylistic changes

--- a/components/contact/contact.sass
+++ b/components/contact/contact.sass
@@ -40,6 +40,10 @@
   color: $contact-topic-color
   text-decoration: none
   cursor: pointer
+  transition: transform 0.3s
+
+.contact__topic:hover
+  transform: translateX(0.5rem)
 
 .contact__right
   height: 65vh
