--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -67,15 +67,15 @@ $nav-strikethrough-color--workflow: $color-primary-100
 $nav-strikethrough-color--contact: $color-accent-cyan-100
 
 // About colors
-$profile-name-font-color: $color-neutral-20
-$profile-about-font-color: $color-neutral-40
+$profile-name-font-color: white
+$profile-about-font-color: $color-neutral-20
 $about-fade-start-color: $color-neutral-20
 $about-fade-end-color: rgba(0, 0, 0, 0)
 $profile-block-color: $color-neutral-20
 
 // Projects colors
-$project-name-font-color: $color-neutral-20
-$project-about-font-color: $color-neutral-40
+$project-name-font-color: white
+$project-about-font-color: $color-neutral-20
 
 // Hero colors
 $hero-background-color: $color-neutral-100
