--- a/global/sass-config/_line-height.sass
+++ b/global/sass-config/_line-height.sass
@@ -13,3 +13,9 @@ $line-height-70: 6rem
 
 // The numbers at the end of the variables should be matching for theoretically
 // optimal spacing.
+
+// About
+$profile-about-line-height: $line-height-30
+
+// Projects
+$project-about-line-height: $line-height-30
