--- a/components/hero/hero.sass
+++ b/components/hero/hero.sass
@@ -35,7 +35,7 @@
   padding: $spacing-20
 
 .hero__video-wrap
-  position: absolute
+  position: fixed
   top: 0
   left: 0
   width: 100%
@@ -50,7 +50,7 @@
 .hero__overlay
   height: 100%
   width: 100%
-  position: absolute
+  position: fixed
   top: 0
   left: 0
   background: $hero-background-color
