--- a/components/projects/projects.sass
+++ b/components/projects/projects.sass
@@ -12,7 +12,7 @@
   display: flex
   align-items: flex-start
   justify-content: center
-  margin-bottom: $spacing-60
+  margin: $spacing-50 0
 
 .project:nth-of-type(odd)
   flex-direction: row-reverse
@@ -36,7 +36,7 @@
   left: 20%
 
 .project__name
-  margin-bottom: $spacing-50
+  margin-bottom: $spacing-60
   +font-primary
   +font-weight-bold
   font-size: $project-name-font-size
