--- a/components/about/about.sass
+++ b/components/about/about.sass
@@ -12,7 +12,7 @@
   display: flex
   align-items: flex-start
   justify-content: center
-  margin-bottom: $spacing-60
+  margin: $spacing-50 0
 
 .profile:nth-of-type(even)
   flex-direction: row-reverse
