Add playsinline video property for autoplay on iOS

--- a/components/hero/hero.html
+++ b/components/hero/hero.html
@@ -8,6 +8,7 @@
       loop="true"
       class="hero__video"
       muted="true"
+      playsinline="true"
     ></video>
   </div>
   <div class="hero__overlay"></div>
