Lower opacity on particles video

--- a/components/hero/hero.html
+++ b/components/hero/hero.html
@@ -3,7 +3,7 @@
   <!-- <h4 class="hero__subheading">A cool tagline can go here</h4> -->
   <div class="hero__video-wrap">
     <video
-      src="/static/images/particles.mp4"
+      src="/static/images/particle.mp4"
       autoplay="true"
       loop="true"
       class="hero__video"
