Add hover effect to contact button

--- a/components/contact/contact.sass
+++ b/components/contact/contact.sass
@@ -92,6 +92,12 @@
   width: 12rem
   +font-weight-light
   text-transform: uppercase
+  transition: background-color 0.2s, color 0.2s
+  
+.form__button:hover
+  background-color: $contact-button-hover-background-color
+  color: $contact-button-hover-font-color
+  cursor: pointer
 
 .contact__form--1--reveal
   display: flex
