--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -114,3 +114,5 @@ $contact-topic-color: $color-accent-cyan-40
 $contact-label-color: $color-neutral-20
 $contact-input-color: $color-neutral-20
 $contact-border-color: $color-neutral-20
+$contact-button-hover-background-color: $color-neutral-20
+$contact-button-hover-font-color: $color-neutral-100
