New bar transition

--- a/components/blocks/blocks.html
+++ b/components/blocks/blocks.html
@@ -1,5 +1,4 @@
-<div class="blocks {{ component.css_classes|join(' ') }}">
-  {% for i in range(12) %}
-  <div class="block"></div>
-  {% endfor %}
+<div class="block-spacer"></div>
+<div class="block {{ component.css_classes|join(' ') }}">
+  <div class="block__background"></div>
 </div>
