More messing around with the transition

--- a/components/blocks/blocks.sass
+++ b/components/blocks/blocks.sass
@@ -3,9 +3,9 @@
 .block-spacer
   height: 0
   overflow: visible
-  padding-bottom: 30vh
   position: relative
   width: 100%
+  margin-top: 12vh
 
 =block-color($start, $middle, $right)
   .block__background
@@ -21,8 +21,9 @@
   +block-color($block-start-color--cyan, $block-middle-color--cyan, $block-right-color--cyan)
 
 .block
+  margin: 0 0 12vh
   width: 100%
-  height: 100px
+  height: 6vh
   position: sticky
   top: 0
   overflow: hidden
