--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -59,8 +59,8 @@ $body-background-color: $color-neutral-100
 // Nav colors
 $nav-logo-background-color: $color-neutral-100
 $nav-background-color: $color-neutral-100
-$nav-font-color: $color-neutral-40
-$nav-font-hover-color: $color-neutral-20
+$nav-font-color: $color-neutral-100
+$nav-font-hover-color: $color-black
 $nav-strikethrough-color--about: $color-accent-yellow-100
 $nav-strikethrough-color--projects: $color-accent-orange-100
 $nav-strikethrough-color--workflow: $color-primary-100
