--- a/components/hero/hero.sass
+++ b/components/hero/hero.sass
@@ -7,6 +7,7 @@
   flex-direction: column
   align-items: center
   justify-content: center
+  perspective: 750px
 
 .hero__heading
   +font-secondary
