--- a/components/hero/hero.html
+++ b/components/hero/hero.html
@@ -1,15 +1,17 @@
 <section class="hero">
-  <h1 class="hero__heading">NERDWISE</h1>
-  <!-- <h4 class="hero__subheading">A cool tagline can go here</h4> -->
-  <div class="hero__video-wrap">
-    <video
-      src="/static/images/particle.mp4"
-      autoplay="true"
-      loop="true"
-      class="hero__video"
-      muted="true"
-      playsinline="true"
-    ></video>
+  <div class="hero__container">
+    <h1 class="hero__heading">NERDWISE</h1>
+    <!-- <h4 class="hero__subheading">A cool tagline can go here</h4> -->
+    <div class="hero__video-wrap">
+      <video
+        src="/static/images/particle.mp4"
+        autoplay="true"
+        loop="true"
+        class="hero__video"
+        muted="true"
+        playsinline="true"
+      ></video>
+    </div>
+    <div class="hero__overlay"></div>
   </div>
-  <div class="hero__overlay"></div>
 </section>
