--- a/components/workflow/workflow.html
+++ b/components/workflow/workflow.html
@@ -1,1 +1,4 @@
-<section class="workflow" id="workflow"></section>
+<section class="workflow" id="workflow">
+  <div class="left"></div>
+  <div class="right"></div>
+</section>
