--- a/components/workflow/workflow.sass
+++ b/components/workflow/workflow.sass
@@ -1,2 +1,13 @@
 .workflow
+  display: flex
   min-height: 80vh
+
+.left,
+.right
+  height: 100vh
+  width: 50%
+
+.left
+  background: purple
+.right
+  background: teal
