--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -5,11 +5,11 @@ $color-white: white
 $color-black: black
 
 // Neutral
-$color-neutral-100: #000
-$color-neutral-80: #333333
-$color-neutral-60: #808080
-$color-neutral-40: #B5B5B5
-$color-neutral-20: #EBEBEB
+$color-neutral-100: #000008
+$color-neutral-80: #333343
+$color-neutral-60: #808098
+$color-neutral-40: #B5B5D5
+$color-neutral-20: #EBEBFF
 
 // Primary
 $color-primary-120: #a30060
