Make changes to header typography

--- a/components/about/about.html
+++ b/components/about/about.html
@@ -12,7 +12,8 @@
       />
     </div>
     <div class="profile__info">
-      <h2 class="profile__name">{{ person.name }} - {{ person.position }}</h2>
+      <h2 class="profile__name">{{ person.name }}</h2>
+      <h4 class="profile__position">{{ person.position }}</h4>
       <p class="profile__about">
         {{ person.about }}
       </p>
