--- a/components/about/about.sass
+++ b/components/about/about.sass
@@ -74,10 +74,17 @@
   margin: 0 $spacing-60
 
 .profile__name
-  margin-bottom: $spacing-60
-  +font-secondary
+  margin-bottom: $spacing-20
+  +font-primary
   +font-weight-bold
   font-size: $profile-name-font-size
+  color: $profile-name-font-color
+
+.profile__position
+  margin-bottom: $spacing-60
+  +font-primary
+  +font-weight-light
+  font-size: $profile-position-font-size
   color: $profile-name-font-color
 
 .profile__about
