--- a/components/projects/projects.sass
+++ b/components/projects/projects.sass
@@ -37,7 +37,7 @@
 
 .project__name
   margin-bottom: $spacing-60
-  +font-primary
+  +font-secondary
   +font-weight-bold
   font-size: $project-name-font-size
   color: $project-name-font-color
