--- a/global/sass-config/_font-sizes.sass
+++ b/global/sass-config/_font-sizes.sass
@@ -20,11 +20,12 @@ $font-size-110: 20rem
 $nav-link-font-size: $font-size-30
 
 // About
-$profile-name-font-size: $font-size-50
+$profile-name-font-size: $font-size-60
+$profile-position-font-size: $font-size-60
 $profile-about-font-size: $font-size-30
 
 // Projects
-$project-name-font-size: $font-size-50
+$project-name-font-size: $font-size-70
 $project-about-font-size: $font-size-30
 
 // Hero
