Add gradients to section headers

--- a/components/about/about.sass
+++ b/components/about/about.sass
@@ -79,6 +79,10 @@
   +font-weight-bold
   font-size: $profile-name-font-size
   color: $profile-name-font-color
+  background: -webkit-linear-gradient($about-gradient-font-start-color, $about-gradient-font-start-color 67%, $about-gradient-font-end-color)
+  -webkit-background-clip: text
+  -webkit-text-fill-color: transparent
+  padding-bottom: 0.3rem
 
 .profile__position
   margin-bottom: $spacing-60
