--- a/components/projects/projects.sass
+++ b/components/projects/projects.sass
@@ -41,6 +41,10 @@
   +font-weight-bold
   font-size: $project-name-font-size
   color: $project-name-font-color
+  background: -webkit-linear-gradient($project-gradient-font-start-color, $project-gradient-font-start-color 67%, $project-gradient-font-end-color)
+  -webkit-background-clip: text
+  -webkit-text-fill-color: transparent
+  padding-bottom: 0.3rem
 
 .project__about
   +font-secondary
