--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -72,10 +72,14 @@ $profile-about-font-color: $color-neutral-20
 $about-fade-start-color: $color-neutral-20
 $about-fade-end-color: rgba(0, 0, 0, 0)
 $profile-block-color: $color-neutral-20
+$about-gradient-font-start-color: $color-accent-yellow-100
+$about-gradient-font-end-color: $color-neutral-100
 
 // Projects colors
 $project-name-font-color: white
 $project-about-font-color: $color-neutral-20
+$project-gradient-font-start-color: $color-accent-orange-100
+$project-gradient-font-end-color: $color-neutral-100
 
 // Hero colors
 $hero-background-color: $color-neutral-100
