Add image to workflow section

--- a/components/workflow/workflow.html
+++ b/components/workflow/workflow.html
@@ -1,4 +1,10 @@
 <section class="workflow" id="workflow">
-  <div class="left"></div>
+  <div class="left">
+    <img
+      src="/static/images/workflow.jpg"
+      alt="Computer Head"
+      class="workflow__image"
+    />
+  </div>
   <div class="right"></div>
 </section>
