Begin skewed-section process

--- a/components/blocks/blocks.html
+++ b/components/blocks/blocks.html
@@ -1,4 +1,4 @@
 <div class="block-spacer"></div>
-<div class="block {{ component.css_classes|join(' ') }}">
+<div class="block {{ component.block_css_classes|join(' ') }}">
   <div class="block__background"></div>
 </div>
