Setup skewed-section

--- a/components/skewed-section/skewed-section.sass
+++ b/components/skewed-section/skewed-section.sass
@@ -1,3 +1,7 @@
 .skewed-section
   overflow: hidden
+  margin-bottom: -10vw
+  background: $color-neutral-100
   
+.skewed-section__content
+  margin-top: -10vw
