--- a/global/main.sass
+++ b/global/main.sass
@@ -20,4 +20,4 @@
 @import ../components/nav/nav
 @import ../components/projects/projects
 @import ../components/workflow/workflow
-
+@import ../components/skewed-section/skewed-section
