--- a/components/about/about.sass
+++ b/components/about/about.sass
@@ -1,5 +1,6 @@
 .about
-  padding-top: 15vh
+  padding-top: calc(15vh + 10vw)
+  padding-bottom: 10vw
   display: flex
   flex-direction: column
   align-items: center
