--- a/components/projects/projects.sass
+++ b/components/projects/projects.sass
@@ -1,5 +1,6 @@
 .projects
-  padding-top: 12vh
+  padding-top: calc(12vh + 10vw)
+  padding-bottom: 10vw
   display: flex
   flex-direction: column
   align-items: center
