Apply inline svg and setup css fill classes

--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -13,6 +13,7 @@ $color-neutral-20: #EBEBFF
 
 // Primary
 $color-primary-120: #a30060
+$color-primary-110: #de0087
 $color-primary-100: #FF0097
 $color-primary-80: #FF3CB0
 $color-primary-60: #FF73C6
@@ -20,6 +21,7 @@ $color-primary-40: #FFABDD
 $color-primary-20: #FFE4F4
 
 // Accent Cyan
+$color-accent-cyan-110: #00a8e5
 $color-accent-cyan-100: #00BAFF
 $color-accent-cyan-80: #3AC9FF
 $color-accent-cyan-60: #73D9FF
@@ -27,6 +29,7 @@ $color-accent-cyan-40: #ADE9FF
 $color-accent-cyan-20: #E5F8FF
 
 // Accent Yellow
+$color-accent-yellow-110: #edda00
 $color-accent-yellow-100: #FFEB00
 $color-accent-yellow-80: #FFF03A
 $color-accent-yellow-60: #FFF472
@@ -41,6 +44,7 @@ $color-accent-green-40: #AEFFAB
 $color-accent-green-20: #E6FFE5
 
 // Accent Orange
+$color-accent-orange-110: #dd5516
 $color-accent-orange-100: #FF6720
 $color-accent-orange-80: #FF803F
 $color-accent-orange-60: #FFA272
@@ -125,3 +129,14 @@ $contact-button-hover-font-color: $color-neutral-100
 $workflow-title-color: $color-neutral-20
 $workflow-paragraph-color: $color-neutral-40
 $workflow-background-color: $color-neutral-100
+
+// Logo colors
+$logo-light-fill-color--pink: $color-primary-100
+$logo-light-fill-color--orange: $color-accent-orange-100
+$logo-light-fill-color--yellow: $color-accent-yellow-100
+$logo-light-fill-color--cyan: $color-accent-cyan-100
+
+$logo-dark-fill-color--pink: $color-primary-110
+$logo-dark-fill-color--orange: $color-accent-orange-110
+$logo-dark-fill-color--yellow: $color-accent-yellow-110
+$logo-dark-fill-color--cyan: $color-accent-cyan-110
