--- a/components/nav/nav.html
+++ b/components/nav/nav.html
@@ -1,11 +1,46 @@
 <nav class="nav">
   <div class="nav__brand">
     <a href="#">
-      <img
-        class="nav__logo"
-        src="{{ component.logo.url }}"
-        alt="{{ component.logo.alt }}"
-      />
+      <svg
+        id="Layer_2"
+        class="logo"
+        data-name="Layer 2"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 1000 1000"
+      >
+        <defs>
+          <style>
+            .cls-3 {
+              fill: none;
+              stroke: #000;
+              stroke-miterlimit: 10;
+              stroke-width: 3px;
+            }
+          </style>
+        </defs>
+        <title>nerdwise-logo</title>
+        <path
+          class="logo__light"
+          d="M22.55,825.42a2.85,2.85,0,0,1-.37-1.81L118.4,289.06a5.18,5.18,0,0,1,.75-1.8l74-105.67a.93.93,0,0,1,1.36-.19L836.72,695.2c.43.35.8.18.82-.37L858.93,63.74c0-.55.24-.6.49-.11l84.93,164.54a5.64,5.64,0,0,1,.51,1.89L977,861.15a1.69,1.69,0,0,1-.84,1.46L833,936.8a2,2,0,0,1-1.75,0L146.26,530a.61.61,0,0,0-1,.48l-48,405.77c-.06.54-.37.62-.67.16Z"
+        />
+        <path
+          class="logo__dark"
+          d="M578.57,488.68a1.75,1.75,0,0,1-.57-1.6L622.69,273a3.59,3.59,0,0,1,1-1.64L858.22,63.4c.41-.36.73-.21.71.34L837.54,694.83c0,.55-.39.72-.82.37Z"
+        />
+        <polygon
+          class="logo__dark"
+          points="97.11 937.26 435.12 867.51 427.05 696.74 145.4 529.51 97.11 937.26"
+        />
+        <path
+          class="cls-3"
+          d="M22.06,825.33a2.81,2.81,0,0,1-.38-1.81l96.64-534a5.59,5.59,0,0,1,.75-1.8l73.86-106.36a.93.93,0,0,1,1.35-.2L836.72,694.88c.43.34.79.17.81-.38l20.94-631c0-.55.24-.6.49-.11L944,228.61a5.64,5.64,0,0,1,.51,1.89l32.9,631a1.69,1.69,0,0,1-.84,1.46L833.39,937a2,2,0,0,1-1.75,0L146.36,530a.61.61,0,0,0-1,.48l-47.76,406c-.07.54-.37.62-.68.16Z"
+        />
+        <path
+          class="cls-3"
+          d="M858.5,62.5,623.25,270.84a3.49,3.49,0,0,0-1,1.64L577.79,488.06"
+        />
+        <polyline class="cls-3" points="97.5 937.5 435.5 867.5 427.05 696.74" />
+      </svg>
     </a>
   </div>
   <ul class="nav__content">
