Add more section spacing

--- a/components/workflow/workflow.sass
+++ b/components/workflow/workflow.sass
@@ -1,15 +1,17 @@
 .workflow
   display: flex
-  min-height: 80vh
+  min-height: 100vh
   padding: 5vw 0
 
 .left,
 .right
-  height: 100vh
+  max-height: 100%
   width: 50%
 
 .left
-  background: purple
+  display: flex
+  align-items: center
+  justify-content: center
 
 .right
   background: teal
