Add placeholder content to workflow section

--- a/components/workflow/workflow.html
+++ b/components/workflow/workflow.html
@@ -6,5 +6,25 @@
       class="workflow__image"
     />
   </div>
-  <div class="right"></div>
+  <div class="right">
+    <h1 class="workflow__header">Workflow</h1>
+    <h2 class="workflow__title">What We Do</h2>
+    <p class="workflow__paragraph">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique
+      maiores provident esse illum possimus ipsam quasi reprehenderit architecto
+      ad quam! Eum aliquam quia alias sed debitis. Provident cum vitae adipisci!
+    </p>
+    <h2 class="workflow__title">How We Do It</h2>
+    <p class="workflow__paragraph">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique
+      maiores provident esse illum possimus ipsam quasi reprehenderit architecto
+      ad quam! Eum aliquam quia alias sed debitis. Provident cum vitae adipisci!
+    </p>
+    <h2 class="workflow__title">Why We Do It</h2>
+    <p class="workflow__paragraph">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique
+      maiores provident esse illum possimus ipsam quasi reprehenderit architecto
+      ad quam! Eum aliquam quia alias sed debitis. Provident cum vitae adipisci!
+    </p>
+  </div>
 </section>
