--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -120,3 +120,8 @@ $contact-input-color: $color-neutral-20
 $contact-border-color: $color-neutral-20
 $contact-button-hover-background-color: $color-neutral-20
 $contact-button-hover-font-color: $color-neutral-100
+
+// Workflow colors
+$workflow-title-color: $color-neutral-20
+$workflow-paragraph-color: $color-neutral-40
+$workflow-background-color: $color-neutral-100
