--- a/components/workflow/workflow.sass
+++ b/components/workflow/workflow.sass
@@ -3,6 +3,9 @@
   min-height: 100vh
   padding: 5vw 0
 
+.workflow__header
+  display: none
+
 .left,
 .right
   max-height: 100%
@@ -14,7 +17,28 @@
   justify-content: center
 
 .right
-  background: teal
+  display: flex
+  flex-direction: column
+  align-items: flex-start
+  justify-content: center
+  padding: 5rem
+  background-color: $workflow-background-color
+
+.workflow__title
+  color: $workflow-title-color
+  +font-primary
+  +font-weight-bold
+  font-size: $font-size-50
+  margin-bottom: $spacing-40
+
+.workflow__paragraph
+  color: $workflow-paragraph-color
+  +font-secondary
+  +font-weight-regular
+  font-size: $font-size-30
+  line-height: $spacing-40
+  margin-bottom: $spacing-60
+  max-width: 40rem
 
 .workflow__image
   height: 100%
